重构事务机制
