# docs/swagger.json
@@ -302,9 +302,14 @@
         "internal_handler_http.ReqCreateUser": {
             "type": "object",
             "required": [
+                "age",
                 "gender"
             ],
             "properties": {
+                "age": {
+                    "description": "年龄",
+                    "type": "integer"
+                },
                 "gender": {
                     "description": "性别",
                     "type": "integer",
@@ -320,6 +325,10 @@
         "internal_handler_http.ReqUpdateUser": {
             "type": "object",
             "properties": {
+                "age": {
+                    "description": "年龄",
+                    "type": "integer"
+                },
                 "gender": {
                     "description": "性别",
                     "type": "integer",
@@ -358,6 +367,10 @@
         "internal_handler_http.UserDetail": {
             "type": "object",
             "properties": {
+                "age": {
+                    "description": "年龄",
+                    "type": "integer"
+                },
                 "created_at": {
                     "description": "创建时间",
                     "type": "string"
@@ -372,6 +385,10 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "is_on_job": {
+                    "description": "是否在职",
+                    "type": "boolean"
                 },
                 "name": {
                     "description": "用户名 (nullable)",
