# internal/handler/grpc/user.go
@@ -1,9 +1,9 @@
 // Code generated by meta-egg. CAREFULLY EDIT.
 // WILL NOT BE replace after re-generated, unless you confirm it!
 // CAREFULLY EDIT.
-// Version: v1.1.5-EE
+// Version: v1.4.1-IE
 // Author: meta-egg
-// Generated at: 2023-05-01 17:18
+// Generated at: 2023-05-18 18:11
 
 package handler
 
@@ -26,6 +26,8 @@ func (h *Handler) GetUserDetail(ctx context.Context, req *api.GetUserDetailReque
 		Id:        mUser.ID,
 		Name:      mUser.Name,
 		Gender:    mUser.Gender,
+		Age:       uint32(mUser.Age),
+		IsOnJob:   mUser.IsOnJob,
 		CreatedBy: mUser.CreatedBy,
 		CreatedAt: mUser.CreatedAt.Format(constraint.SecondTimeFormat),
 		UpdatedBy: mUser.UpdatedBy,
