# internal/handler/http/user.go
@@ -1,9 +1,9 @@
 // Code generated by meta-egg. CAREFULLY EDIT.
 // WILL NOT BE replace after re-generated, unless you confirm it!
 // CAREFULLY EDIT.
-// Version: v1.2.5-EE
+// Version: v1.4.1-IE
 // Author: meta-egg
-// Generated at: 2023-05-10 17:24
+// Generated at: 2023-05-18 18:11
 
 package handler
 
@@ -23,6 +23,8 @@ type UserDetail struct {
 	Id        uint64  `json:"id"`         //
 	Name      *string `json:"name"`       // 用户名 (nullable)
 	Gender    uint64  `json:"gender"`     // 性别
+	Age       uint8   `json:"age"`        // 年龄
+	IsOnJob   bool    `json:"is_on_job"`  // 是否在职
 	CreatedBy *uint64 `json:"created_by"` // 创建者 (nullable)
 	CreatedAt string  `json:"created_at"` // 创建时间
 	UpdatedBy *uint64 `json:"updated_by"` // 更新者 (nullable)
@@ -34,6 +36,8 @@ func newUserDetailFromModel(mUser *model.User) UserDetail {
 		Id:        mUser.ID,
 		Name:      mUser.Name,
 		Gender:    mUser.Gender,
+		Age:       mUser.Age,
+		IsOnJob:   mUser.IsOnJob,
 		CreatedBy: mUser.CreatedBy,
 		CreatedAt: mUser.CreatedAt.Format(constraint.SecondTimeFormat),
 		UpdatedBy: mUser.UpdatedBy,
@@ -44,6 +48,7 @@ func newUserDetailFromModel(mUser *model.User) UserDetail {
 type ReqCreateUser struct {
 	Name   *string `json:"name" binding:"omitempty,max=64"` // 用户名
 	Gender uint64  `json:"gender" binding:"required,gte=1"` // 性别
+	Age    uint8   `json:"age" binding:"required"`          // 年龄
 }
 
 //	@Id			CreateUser
@@ -68,6 +73,7 @@ func (h *Handler) CreateUser(c *gin.Context) {
 	mUser := &model.User{
 		Name:   req.Name,
 		Gender: req.Gender,
+		Age:    req.Age,
 	}
 	err = h.BizService.CreateUser(c.Request.Context(), mUser)
 	if err != nil {
@@ -189,6 +195,7 @@ func (h *Handler) GetUserList(c *gin.Context) {
 type ReqUpdateUser struct {
 	Name   *string `json:"name" binding:"omitempty,max=64"`  // 用户名
 	Gender *uint64 `json:"gender" binding:"omitempty,gte=1"` // 性别
+	Age    *uint8  `json:"age" binding:"omitempty"`          // 年龄
 }
 
 //	@Id			UpdateUser
@@ -215,6 +222,7 @@ func (h *Handler) UpdateUser(c *gin.Context) {
 		Set: &biz.UserSetOption{
 			Name:   req.Name,
 			Gender: req.Gender,
+			Age:    req.Age,
 		},
 	}
 	err = h.BizService.UpdateUserByID(c.Request.Context(), id, opt)
